--- a/a.html
+++ b/a.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="gif_container">
-        <img src="C:\Users\imran\Downloads\milk-and-mocha-cute.gif" alt="Cute animated illustration" />
+        <img src="milk-and-mocha-cute.gif" alt="Cute animated illustration" />
       </div>
 
       <div class="buttons">
