--- a/a1.html
+++ b/a1.html
@@ -12,7 +12,7 @@
         <h1 class="header_text">Yeeyy! Finally</h1>
       </div>
       <div class="gif_container">
-        <img src="C:\Users\imran\Downloads\yes.gif" alt="Cute animated illustration" />
+        <img src="milk-and-mocha-cute.gif" alt="Cute animated illustration" />
       </div>
       <button class="btn" onclick="fixDate()">Let's Fix a Date</button>
     </div>
